# unix.lab1

./: script.sh
lab2/: Dockerfile  script.sh
lab3/: lab3.cpp
lab4/: CMakeLists.txt  README.md  docker-compose.yml
lab4/gateway/: CMakeLists.txt  Dockerfile  main.cpp
lab4/worker/: CMakeLists.txt  Dockerfile  text_quality.hpp
os_lab1/: mon.cpp
os_lab2/: server.c
os_lab34/: mod.c
